--- a/Trabalhos/T1/NLP_T1.ipynb
+++ b/Trabalhos/T1/NLP_T1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "NLP T1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8mlL55/XpsYAZwK1ARrf4",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNyLqSP9iAFA91CL0P7fI39",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +27,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/dudaholandah/NLP/blob/main/Trabalhos/T1/NLP_T1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feito por:\n",
+        "* Ariel Batista da Silva - 170099776\n",
+        "* Bruno Esteves Dalla Costa Filho - 170100863\n",
+        "* Maria Eduarda Machado de Holanda - 190043725"
+      ],
+      "metadata": {
+        "id": "nRUKyTPn_MdB"
+      }
     },
     {
       "cell_type": "code",
@@ -58,7 +71,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 426
         },
         "id": "zO8oB_7bwTDS",
         "outputId": "61f5af66-81b0-4b6e-d2f9-899f97d543c5"
