Notebook utilizando as primeiras 100 instâncias

--- a/Trabalhos/T3/NLP_T3_100.ipynb
+++ b/Trabalhos/T3/NLP_T3_100.ipynb
@@ -15,7 +15,7 @@
         "aImwsVPvVXW-",
         "GHyPDoguWCFg"
       ],
-      "authorship_tag": "ABX9TyNG4xCZG/DWEh4uLCaSDUKw",
+      "authorship_tag": "ABX9TyNGFpy4iO/Xau2KLRVQRamf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,40 +70,14 @@
       "source": [
         "nltk.download('stopwords')\n",
         "nltk.download('wordnet')\n",
-        "nltk.download('omw-1.4')"
+        "nltk.download('omw-1.4')\n",
+        "nltk.download('reuters')"
       ],
       "metadata": {
-        "id": "kzOmvrQCMI4N",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "99e0ad04-42e4-4b7e-9759-5f6be2f99686"
+        "id": "kzOmvrQCMI4N"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n",
-            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
-            "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -149,7 +123,7 @@
       "metadata": {
         "id": "ZmZne5KKRUi1"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -168,7 +142,7 @@
       "metadata": {
         "id": "2bu_NFf3CmTK"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -182,9 +156,9 @@
           "height": 424
         },
         "id": "T9yDCKCkD6vr",
-        "outputId": "985b6133-1baa-4427-ba7e-12e616fc3083"
+        "outputId": "e7ee482d-6a8c-45c3-d042-48b7c4a00733"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +194,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fd092b12-1135-4792-9c25-25d62b3e2d56\">\n",
+              "  <div id=\"df-8e0daef8-0d08-411e-9856-2b28328c9d37\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -316,7 +290,7 @@
               "</table>\n",
               "<p>10788 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd092b12-1135-4792-9c25-25d62b3e2d56')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e0daef8-0d08-411e-9856-2b28328c9d37')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -367,12 +341,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fd092b12-1135-4792-9c25-25d62b3e2d56 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8e0daef8-0d08-411e-9856-2b28328c9d37 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fd092b12-1135-4792-9c25-25d62b3e2d56');\n",
+              "          const element = document.querySelector('#df-8e0daef8-0d08-411e-9856-2b28328c9d37');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -395,7 +369,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -409,7 +383,7 @@
       "metadata": {
         "id": "Dq92wsJLLqsY"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -443,7 +417,7 @@
       "metadata": {
         "id": "3uZXXtGBK-rG"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -456,9 +430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0W6I7WRqLCr0",
-        "outputId": "b7eb0eaf-0c0d-48ad-fcc6-c0090c9a36bb"
+        "outputId": "536122f7-8321-4644-d499-16b041fcec6a"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -33759,7 +33733,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
@@ -33788,7 +33762,7 @@
       "metadata": {
         "id": "PGrZuw_tLOx5"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -33801,9 +33775,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "khsMaIKMLdrn",
-        "outputId": "4b122a92-a534-47ca-ae28-aa45188acfd5"
+        "outputId": "1a33f71d-f293-4dab-c4f3-1d0d7d4b185f"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67104,7 +67078,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ]
     },
@@ -67139,7 +67113,7 @@
       "metadata": {
         "id": "tFsvNku4CuK6"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -67152,9 +67126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2JMHM9dDKQnu",
-        "outputId": "8d0869e7-90ea-4bbb-b715-8e6113dc1993"
+        "outputId": "f1e984cc-c427-4ca4-ea2d-1b4b362bced8"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100692,7 +100666,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 15
         }
       ]
     },
@@ -100722,7 +100696,7 @@
       "metadata": {
         "id": "82qQsYEdIVh2"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -100735,9 +100709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8UHpbpWTMLcM",
-        "outputId": "cdcfc6c8-b5aa-4bb8-90cb-e431deccd419"
+        "outputId": "42218ceb-0ed9-457b-db83-63d5c6b5dfe5"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101747,7 +101721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     },
@@ -101773,7 +101747,7 @@
       "metadata": {
         "id": "nhmvOdK4VbHA"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -101784,7 +101758,7 @@
       "metadata": {
         "id": "1e5-Q4mWvnjz"
       },
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -101795,12 +101769,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 0
         },
         "id": "g3ihRceQ_2zf",
-        "outputId": "c92e381c-c24d-4a87-90dc-84f2e69c7299"
+        "outputId": "e68849f1-3c78-4740-fd8b-c9cbafc35f64"
       },
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101849,7 +101823,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6500a630-1d5d-491f-9635-29e1f34d8fe0\">\n",
+              "  <div id=\"df-880a679f-dc16-490e-8439-a5d4b4c122f9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -102161,7 +102135,7 @@
               "</table>\n",
               "<p>10788 rows × 8831 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6500a630-1d5d-491f-9635-29e1f34d8fe0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-880a679f-dc16-490e-8439-a5d4b4c122f9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -102212,12 +102186,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6500a630-1d5d-491f-9635-29e1f34d8fe0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-880a679f-dc16-490e-8439-a5d4b4c122f9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6500a630-1d5d-491f-9635-29e1f34d8fe0');\n",
+              "          const element = document.querySelector('#df-880a679f-dc16-490e-8439-a5d4b4c122f9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -102240,7 +102214,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 20
         }
       ]
     },
@@ -102278,7 +102252,7 @@
       "metadata": {
         "id": "8iHTdWo-WIY8"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -102320,15 +102294,43 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RjAY0GSpW87i",
-        "outputId": "9bf085f8-11c1-4fb4-ed91-c91b20b79596"
+        "outputId": "391659fc-412e-4301-bc1e-d69ba22066a6"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[79, 72, 48, 52, 55, 56, 45, 45, 35, 37]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "acuracia = 0\n",
+        "for x in top10:\n",
+        "  acuracia += x/100\n",
+        "\n",
+        "acuracia = acuracia*10\n",
+        "print(f\"Acurácia: {acuracia:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "BCA4ult1x7_Z",
+        "outputId": "08622ac4-3e09-4d2d-f44f-a62ba5a7092c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acurácia: 52.40%\n"
           ]
         }
       ]
