--- a/Trabalhos/T4/NLP_Forward_e_BackPropagation.ipynb
+++ b/Trabalhos/T4/NLP_Forward_e_BackPropagation.ipynb
@@ -6,7 +6,7 @@
       "name": "NLP - Forward e BackPropagation",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtsVC3weLaUENdqydR79Qu",
+      "authorship_tag": "ABX9TyPIc/qIdSDoaZtV1kdRGnYG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,19 +51,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Forward Propagation"
+        "# XOR MLP"
       ],
       "metadata": {
-        "id": "dF9hmK9Z52RP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "XOR"
-      ],
-      "metadata": {
-        "id": "Ry4c_Lc16HoO"
+        "id": "SSDTwwNotTaK"
       }
     },
     {
@@ -105,60 +96,9 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "for j, weight in enumerate(weights_l1):\n",
-        "  print(weight)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9F1hYOcKejR8",
-        "outputId": "735ca19f-909e-48c7-8a04-87949edf91fe"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0.25666336 0.65490823]\n",
-            "[0.78956962 0.42437608]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "weights_l2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pnNAQn7Sek9F",
-        "outputId": "be4cb161-5fff-44c9-8d38-64273650211a"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0.23833069, 0.82113078])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Forward Propagation"
+        "## Forward Propagation"
       ],
       "metadata": {
         "id": "d96_KdvKdi7P"
@@ -192,46 +132,17 @@
       "metadata": {
         "id": "kwDWIQsp6Oee"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Backward Propagation"
+        "## Backward Propagation"
       ],
       "metadata": {
         "id": "KrEX0LsQKR-E"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "O"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3CjYme3Dki2K",
-        "outputId": "633207fc-ff7c-4e50-9285-d241b87335f5"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[0.5, 0.5],\n",
-              " [0.6581156668893144, 0.6045299317035359],\n",
-              " [0.5638158945526646, 0.6877389120399415],\n",
-              " [0.7133216498744428, 0.7709963503803826]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -241,7 +152,7 @@
       "metadata": {
         "id": "xHfgqSdNmzFm"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -274,45 +185,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SiuViMoAjFYW",
-        "outputId": "4b4b1b28-6e7d-4071-ba06-e2c879c95bd6"
+        "outputId": "e6de382c-0e53-4955-f286-e600c4dcb1b6"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Gradiente 3: 0.1468125284856062\n",
-            "Gradiente 2: 0.030138071533611224\n",
-            "Gradiente 1: 0.008747482889597239\n",
+            "Gradiente 3: 0.14810665901760417\n",
+            "Gradiente 2: 0.012824709350254381\n",
+            "Gradiente 1: 0.036361947683552345\n",
             "---\n",
-            "Pesos 2 camada: [0.00349899 0.01205523]\n",
-            "Pesos 1 camada: [[0.00022452 0.00197377]\n",
-            " [0.00069067 0.00127899]]\n",
+            "Pesos 2 camada: [0.01454478 0.00512988]\n",
+            "Pesos 1 camada: [[0.00118098 0.00051193]\n",
+            " [0.0024299  0.00063223]]\n",
             "---\n",
-            "Gradiente 3: -0.07704829869947533\n",
-            "Gradiente 2: -0.0002220597935798484\n",
-            "Gradiente 1: -6.065792862833953e-05\n",
+            "Gradiente 3: -0.06612101474229472\n",
+            "Gradiente 2: -7.984788025369263e-05\n",
+            "Gradiente 1: -0.00023110015531774004\n",
             "---\n",
-            "Pesos 2 camada: [-2.69591470e-05 -9.28834855e-05]\n",
-            "Pesos 1 camada: [[-1.36186653e-09 -4.38294316e-08]\n",
-            " [-4.18948951e-09 -2.84011737e-08]]\n",
+            "Pesos 2 camada: [-9.61715552e-05 -3.39193118e-05]\n",
+            "Pesos 1 camada: [[-2.72923921e-08 -4.08763959e-09]\n",
+            " [-5.61550739e-08 -5.04824526e-09]]\n",
             "---\n",
-            "Gradiente 3: -0.07363369656130861\n",
-            "Gradiente 2: 1.4687794022855867e-06\n",
-            "Gradiente 1: 4.881911483742055e-07\n",
+            "Gradiente 3: -0.0663846031179391\n",
+            "Gradiente 2: 5.044818628701754e-07\n",
+            "Gradiente 1: 1.5547163576082726e-06\n",
             "---\n",
-            "Pesos 2 camada: [1.98510165e-07 6.83935439e-07]\n",
-            "Pesos 1 camada: [[-6.64851184e-17 -6.43757663e-15]\n",
-            " [-2.04527169e-16 -4.17150589e-15]]\n",
+            "Pesos 2 camada: [6.38431052e-07 2.25172005e-07]\n",
+            "Pesos 1 camada: [[-4.24319285e-15 -2.06214003e-16]\n",
+            " [-8.73052120e-15 -2.54674817e-16]]\n",
             "---\n",
-            "Gradiente 3: 0.1475598381287213\n",
-            "Gradiente 2: 1.781878155828593e-08\n",
-            "Gradiente 1: 5.990060680723811e-09\n",
+            "Gradiente 3: 0.1455844395601568\n",
+            "Gradiente 2: 5.952733420492904e-09\n",
+            "Gradiente 1: 2.0439249592913698e-08\n",
             "---\n",
-            "Pesos 2 camada: [2.92921278e-09 1.00921403e-08]\n",
-            "Pesos 1 camada: [[-3.98249893e-26 -1.14709772e-23]\n",
-            " [-1.22513015e-25 -7.43311523e-24]]\n",
+            "Pesos 2 camada: [9.29456269e-09 3.27815402e-09]\n",
+            "Pesos 1 camada: [[-8.67276777e-24 -1.22753699e-25]\n",
+            " [-1.78445302e-23 -1.51601130e-25]]\n",
             "---\n"
           ]
         }
