Notebook Métricas de Concordância entre Anotadores

--- a/Trabalhos/T6/Reviews.ipynb
+++ b/Trabalhos/T6/Reviews.ipynb
@@ -29,6 +29,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Feito por:\n",
+        "\n",
+        "- Ariel Batista da Silva - 170099776\n",
+        "- Bruno Esteves Dalla Costa Filho - 170100863\n",
+        "- Maria Eduarda Machado de Holanda - 190043725"
+      ],
+      "metadata": {
+        "id": "Au9OgG2JKjRX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Imports"
       ],
       "metadata": {
@@ -469,11 +482,11 @@
         "print(cohen_kappa_score(corpus_transpose[0], corpus_transpose[1]))"
       ],
       "metadata": {
-        "id": "iNGT9b30IQt3",
-        "outputId": "8931c7bb-1aa7-4773-9e05-61befff261ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iNGT9b30IQt3",
+        "outputId": "8931c7bb-1aa7-4773-9e05-61befff261ac"
       },
       "execution_count": 32,
       "outputs": [
@@ -494,11 +507,11 @@
         "print(cohen_kappa_score(corpus_transpose[0], corpus_transpose[2]))"
       ],
       "metadata": {
-        "id": "4xFtT03sJQ1T",
-        "outputId": "276cf81e-19cc-4028-ba38-ded3405a625d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4xFtT03sJQ1T",
+        "outputId": "276cf81e-19cc-4028-ba38-ded3405a625d"
       },
       "execution_count": 33,
       "outputs": [
@@ -519,11 +532,11 @@
         "print(cohen_kappa_score(corpus_transpose[1], corpus_transpose[2]))"
       ],
       "metadata": {
-        "id": "45p9aPw6JR5U",
-        "outputId": "0ff4fa52-fcf1-4b60-d30b-594cb7d1adf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "45p9aPw6JR5U",
+        "outputId": "0ff4fa52-fcf1-4b60-d30b-594cb7d1adf3"
       },
       "execution_count": 34,
       "outputs": [
@@ -553,11 +566,11 @@
         "                                                                          level_of_measurement=\"nominal\"))"
       ],
       "metadata": {
-        "id": "7z_ODit5Jipw",
-        "outputId": "dc7578a2-b3ae-43a4-ebc0-50f9de3a4835",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7z_ODit5Jipw",
+        "outputId": "dc7578a2-b3ae-43a4-ebc0-50f9de3a4835"
       },
       "execution_count": 35,
       "outputs": [
